[project]
name = "GIS_Tools"
version = "0.1.6"
description = "Hiresolution Aerial Ortho Images, Planned: LAS, DSM creation tools"
author = "Brian Davis (bb6)"

dependencies = [
    "Pillow",
    "numpy",
    "rasterio"
]

[tool.lichtfeld]
auto_start = true
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.5.1"
required_features = []
